# hgindex

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: bench.rs  query_benchmark.rs
scripts/: Makefile  bench_schemas.sh  benchmark_against_tabix.sh  benchmark_query.sh  compare_sizes.sh  download_refgene.sh  download_refgene.sql  download_repeat_masker.mk  download_repeat_masker.sh  download_repeatmasker.sh  install_duckdb.sh  repeat_masker.sql  run_benchmarks.sh
scripts/sql/: download_refgene.sql  download_repeatmasker.sql
src/: error.rs  io.rs  lib.rs  stats.rs  store.rs  test_utils.rs
src/block/: mod.rs  reader.rs  writer.rs
src/container/: container.rs  mod.rs
src/index/: binning.rs  binning_index.rs  index.rs  mod.rs
src/records/: mod.rs
tests/: setup_tabix_validation.sh  tabix_validation.rs
workflows/: ci.yml
