[package]
name = "hgindex"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
clap = { version = "4.5.23", features = ["derive"] }
indexmap = { version = "2.7.0", features = ["serde"] }
serde = { version = "1.0.216", features = ["derive"] }
thiserror = "2.0.8"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
zstd = "0.13.2"

[dev-dependencies]
proptest = "1.6.0"
tempfile = "3.14.0"

[[bin]]
name = "hgidx"
path = "src/bin/index_tools.rs"
