[package]
name = "hgindex"
version = "0.1.0"
edition = "2021"

[features]
default = []
cli = ["dep:clap", "dep:csv", "dep:indicatif", "dep:flate2"]
dev = ["cli", "dep:rand"]

[dependencies]
bincode = "1.3.3"
indexmap = { version = "2.7.0", features = ["serde"] }
serde = { version = "1.0.216", features = ["derive"] }
thiserror = "2.0.8"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
zstd = "0.13.2"
clap = { version = "4.4", features = ["derive"], optional = true }
csv = { version = "1.3", optional = true }
rand = { version = "0.8.5", optional = true }
indicatif = { version = "0.17.0", optional = true }
flate2 = { version = "1.0.35", optional = true }
memmap2 = "0.9.5"
rustc-hash = "2.1.0"
num_cpus = "1.16.0"


[dev-dependencies]
criterion = "0.5.1"
proptest = "1.6.0"
rand = "0.8.5"
tempfile = "3.14.0"

[[bin]]
name = "hgidx"
path = "src/bin/main.rs"
required-features = ["cli"]

[[bench]]
name = "query_benchmark"
harness = false

[profile.release]
opt-level = 3

[profile.profiling]
opt-level = 3
inherits = "release"
debug = true
